--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -90,6 +90,7 @@ RUN sudo apt-get update && sudo apt-get install -y \
     black \
     isort \
     sphinx \
+    tomli \
     && sudo rm -rf /var/lib/apt/lists/* && sudo rm -rf /var/cache/apt && sudo apt-get clean
 
 # install shell code checking/formatting tools
