--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -91,6 +91,7 @@ RUN sudo apt-get update && sudo apt-get install -y \
     isort \
     sphinx \
     tomli \
+    ipython \
     && sudo rm -rf /var/lib/apt/lists/* && sudo rm -rf /var/cache/apt && sudo apt-get clean
 
 # install shell code checking/formatting tools
