--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [tool.black]
-line-lenght = 120
+line_length = 120
 
 
 [tool.isort]
 profile = "black"
 line_length = 120
-
 
 [tool.pydocstyle]
 convention = "google"
