--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,14 @@
+[tool.pylint.main]
+fail-under = 8
+
+[tool.pylint.format]
+max-line-length = 120
+
+[tool.pylint."messages control"]
+disable = ["import-error"]
+
 [tool.black]
 line_length = 120
-
 
 [tool.isort]
 profile = "black"
@@ -9,14 +17,8 @@ line_length = 120
 [tool.pydocstyle]
 convention = "google"
 
-
-[tool.pylint]
-fail-under = 9
-max-line-length = 120
-
-
 [tool.mypy]
-
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 python_files = ["test_*.py"]
