--- a/diffusion/config/ImageFolder.yaml
+++ b/diffusion/config/ImageFolder.yaml
@@ -7,7 +7,9 @@ dataset:
 
 diffusion:
   num_steps: 1000
-  noise_schedule: "cosine"
+  noise_schedule: "linear"
+  beta_1: 1e-4
+  beta_T: 0.02
 
 model:
   class_cond: False
@@ -15,6 +17,7 @@ model:
   ema_decay: 0.999
 
 experiment:
+  data_type: "img"
   data_shape: [3, 32, 32]
   num_epochs: 26
   batch_size: 64
