--- a/diffusion/config/Cifar-10.yaml
+++ b/diffusion/config/Cifar-10.yaml
@@ -12,8 +12,9 @@ diffusion:
   beta_T: 0.02
 
 model:
+  name: "UNet2d"
+  hidden_dims: [32, 64, 128, 256]
   class_cond: True
-  unet_hidden_dims: [32, 64, 128, 256]
   ema_decay: 0.999
 
 experiment:
@@ -21,10 +22,11 @@ experiment:
   data_shape: [3, 32, 32]
   num_epochs: 101
   batch_size: 64
-  optim_lr: 0.0002
-  lr_schedule_mult: 1.0 # 1.0 effectively ignores schedule
+  optim_lr: 0.0005
+  lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
   device: "cuda"
   dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
   eval_interval: 5
+  eval_num: 100
   eval_dir: ./Cifar-10/reverse_diffusion
   checkpoints_dir: ./Cifar-10/checkpoints
