--- a/diffusion/config/ImageFolder.yaml
+++ b/diffusion/config/ImageFolder.yaml
@@ -12,8 +12,9 @@ diffusion:
   beta_T: 0.02
 
 model:
+  name: "UNet2d"
+  hidden_dims: [32, 64, 128, 256]
   class_cond: False
-  unet_hidden_dims: [32, 64, 128, 256]
   ema_decay: 0.999
 
 experiment:
@@ -22,9 +23,10 @@ experiment:
   num_epochs: 26
   batch_size: 64
   optim_lr: 0.0005
-  lr_schedule_mult: 0.05 # 1.0 effectively ignores schedule
+  lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
   device: "cuda"
   dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
   eval_interval: 5
+  eval_num: 100
   eval_dir: ./ImageFolder/reverse_diffusion
   checkpoints_dir: ./ImageFolder/checkpoints
