--- a/diffusion/config/MNIST.yaml
+++ b/diffusion/config/MNIST.yaml
@@ -12,19 +12,21 @@ diffusion:
   beta_T: 0.02
 
 model:
+  name: "UNet2d"
+  hidden_dims: [32, 64, 128, 256]
   class_cond: True
-  unet_hidden_dims: [32, 64, 128, 256]
   ema_decay: 0.999
 
 experiment:
   data_type: "img"
   data_shape: [1, 28, 28]
-  num_epochs: 26
+  num_epochs: 31
   batch_size: 64
-  optim_lr: 0.0002
-  lr_schedule_mult: 1.0 # 1.0 effectively ignores schedule
+  optim_lr: 0.0005
+  lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
   device: "cuda"
   dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
   eval_interval: 5
+  eval_num: 100
   eval_dir: ./MNIST/reverse_diffusion
   checkpoints_dir: ./MNIST/checkpoints
