--- a/diffusion/config/ModelNet10.yaml
+++ b/diffusion/config/ModelNet10.yaml
@@ -12,19 +12,25 @@ diffusion:
   beta_T: 5e-4
 
 model:
+  # name: "PointDiffusionTransformer" quite heavy for smaller gpus :(
+  # hidden_dims: [64, 64, 64, 64, 64]
+  # context_dim: 32
+  name: "PointNet" # PointNet
+  hidden_dims: [128, 256, 512, 256, 128]
+  context_dim: 128
   class_cond: True
-  unet_hidden_dims: [32, 64, 128, 256]
   ema_decay: 0.999
 
 experiment:
   data_type: "pcd"
-  data_shape: [3, 3303]
-  num_epochs: 26
+  data_shape: [3, 3000]
+  num_epochs: 101
   batch_size: 64
-  optim_lr: 0.0002
-  lr_schedule_mult: 1.0 # 1.0 effectively ignores schedule
+  optim_lr: 0.0005
+  lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
   device: "cuda"
   dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
-  eval_interval: 5
+  eval_interval: 10
+  eval_num: 100
   eval_dir: ./ModelNet10/reverse_diffusion
   checkpoints_dir: ./ModelNet10/checkpoints
