--- a/diffusion/config/ShapeNet.yaml
+++ b/diffusion/config/ShapeNet.yaml
@@ -6,25 +6,31 @@ dataset:
   pin_memory: False
 
 diffusion:
-  num_steps: 500
+  num_steps: 1000
   noise_schedule: "linear"
-  beta_1: 1e-6
-  beta_T: 5e-4
+  beta_1: 5e-6
+  beta_T: 1e-3
 
 model:
+  # name: "PointDiffusionTransformer" quite heavy for smaller gpus :(
+  # hidden_dims: [64, 64, 64, 64, 64]
+  # context_dim: 32
+  name: "PointNet" # PointNet
+  hidden_dims: [128, 256, 512, 256, 128]
+  context_dim: 128
   class_cond: True
-  unet_hidden_dims: [32, 64, 128, 256]
   ema_decay: 0.999
 
 experiment:
   data_type: "pcd"
   data_shape: [3, 3000]
-  num_epochs: 26
+  num_epochs: 201
   batch_size: 64
-  optim_lr: 0.0002
-  lr_schedule_mult: 1.0 # 1.0 effectively ignores schedule
+  optim_lr: 0.0005
+  lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
   device: "cuda"
   dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
-  eval_interval: 5
+  eval_interval: 10
+  eval_num: 100
   eval_dir: ./ShapeNet/reverse_diffusion
   checkpoints_dir: ./ShapeNet/checkpoints
