--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ convention = "google"
 
 [tool.mypy]
 ignore_missing_imports = true
+strict = true
 
 [tool.pytest.ini_options]
 python_files = ["test_*.py"]
