--- a/diffusion/config/ModelNet10.yaml
+++ b/diffusion/config/ModelNet10.yaml
@@ -20,6 +20,7 @@ model:
   context_dim: 128
   class_cond: True
   ema_decay: 0.999
+  dropout: 0.0
 
 experiment:
   data_type: "pcd"
@@ -29,8 +30,9 @@ experiment:
   optim_lr: 0.0005
   lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
   device: "cuda"
-  dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
+  dtype: "float32"
   eval_interval: 10
   eval_num: 100
   eval_dir: ./ModelNet10/reverse_diffusion
   checkpoints_dir: ./ModelNet10/checkpoints
+  checkpoint_path: ""
