--- a/diffusion/config/ImageFolder_overfit.yaml
+++ b/diffusion/config/ImageFolder_overfit.yaml
@@ -16,17 +16,19 @@ model:
   hidden_dims: [32, 64, 128, 256]
   class_cond: True
   ema_decay: 0.999
+  dropout: 0.0
 
 experiment:
   data_type: "img"
   data_shape: [3, 32, 32]
-  num_epochs: 51
+  num_epochs: 41
   batch_size: 64
-  optim_lr: 0.0005
-  lr_schedule_mult: 0.1 # 1.0 effectively ignores schedule
+  optim_lr: 0.001
+  lr_schedule_mult: 0.01 # 1.0 effectively ignores schedule
   device: "cuda"
-  dtype: "float32" # NOTE: bfloat16 is possible and faster on Ampere+ GPUs, but results are not stable for some reason
-  eval_interval: 5
-  eval_num: 100
+  dtype: "float32"
+  eval_interval: 10
+  eval_num: 20
   eval_dir: ./ImageFolder_overfit/reverse_diffusion
   checkpoints_dir: ./ImageFolder_overfit/checkpoints
+  checkpoint_path: ""
