--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -19,6 +19,9 @@ jobs:
         os: [ubuntu-latest]
         python-version: ["3.10"]
 
+    env:
+      CHANGED_FILES: $(git diff --name-only origin/main origin/$CI_BUILD_REF_NAME)
+
     steps:
       - uses: actions/checkout@v3
 
@@ -38,19 +41,19 @@ jobs:
               pylint
 
       - name: "Check SCA: black"
-        run: python -m black "./" --check --config="pyproject.toml"
+        run: python -m black ${{env.CHANGED_FILES}} --check --config="pyproject.toml"
 
       - name: "Check SCA: isort"
-        run: python -m isort "./" --check-only --settings-path="pyproject.toml"
+        run: python -m isort ${{env.CHANGED_FILES}} --check-only --settings-path="pyproject.toml"
 
       - name: "Check SCA: flake8"
-        run: python -m flake8 "./" --count --config="setup.cfg"
+        run: python -m flake8 ${{env.CHANGED_FILES}} --count --config="setup.cfg"
 
       - name: "Check SCA: pylint"
-        run: python -m pylint "./" --recursive "y" --rcfile="pyproject.toml"
+        run: python -m pylint ${{env.CHANGED_FILES}} --recursive "y" --rcfile="pyproject.toml"
 
       - name: "Check SCA: mypy"
-        run: python -m mypy "./" --config="pyproject.toml"
+        run: python -m mypy ${{env.CHANGED_FILES}} --config="pyproject.toml"
 
       - name: "Check SCA: pydocstyle"
-        run: python -m pydocstyle "./" --count --config="pyproject.toml"
+        run: python -m pydocstyle ${{env.CHANGED_FILES}} --count --config="pyproject.toml"
