--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,44 +33,12 @@
         ]
     },
     // ---------- python ----------
-    "python.defaultInterpreterPath": "/usr/bin/python3",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.pydocstyleEnabled": true,
-    "python.linting.mypyEnabled": true,
-    "python.linting.pylintPath": "/usr/bin/pylint",
-    "python.linting.flake8Path": "/usr/bin/flake8",
-    "python.linting.pydocstylePath": "/usr/bin/pydocstyle",
-    "python.linting.mypyPath": "/usr/bin/mypy",
-    "python.formatting.provider": "black",
-    "python.formatting.blackPath": "/usr/bin/black",
-    "python.sortImports.path": "/usr/bin/isort",
-    "python.linting.pylintArgs": [
-        "--line-length=120"
-    ],
-    "python.linting.flake8Args": [
-        "--line-length=120"
-    ],
-    "python.formatting.blackArgs": [
-        "--line-length=120"
-    ],
-    "python.sortImports.args": [
-        "--profile=black",
-        "--atomic",
-        "-rc"
-    ],
     "editor.codeActionsOnSave": {
-        "source.organizeImports": true
+        "source.organizeImports": "explicit"
     },
     "autoDocstring.docstringFormat": "google",
     "autoDocstring.generateDocstringOnEnter": true,
     "autoDocstring.guessTypes": true,
-    // ---------- bash ---------
-    "shellformat.path": "/usr/bin/shfmt",
-    "shellformat.effectLanguages": [
-        "shellscript"
-    ],
     // ---------- spell check ----------
     "cSpell.diagnosticLevel": "Hint",
     "cSpell.language": "en",
