support for bbox_2d and semseg mask labelling with Grounding-SAM

--- a/dataset_creator/environment.yml
+++ b/dataset_creator/environment.yml
@@ -19,3 +19,7 @@ dependencies:
       - hydra-core
       - open_clip_torch
       - transformers
+      - autodistill
+      - autodistill-grounded-sam
+      - roboflow
+      - scikit-learn
