--- a/dataset_creator/environment.yml
+++ b/dataset_creator/environment.yml
@@ -18,7 +18,7 @@ dependencies:
       - torcheval
       - hydra-core
       - open_clip_torch
-      - transformers
+      - transformers # git+https://github.com/huggingface/transformers.git (transformers-4.38.0.dev needed)
       - autodistill
       - autodistill-grounded-sam
       - roboflow
