--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -24,39 +24,26 @@ jobs:
 
     steps:
       - name: Checkout branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up Python (${{ matrix.python-version }})
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install SCA Python tools
         run: |
           pip install \
-              black \
-              isort \
-              pydocstyle \
-              flake8 \
-              mypy \
-              pylint
+              ruff \
+              mypy
 
-      - name: "Check SCA: black"
-        run: python -m black ${{env.CHANGED_PYTHON_FILES}} --check --config="pyproject.toml"
+      - name: "Check format: ruff"
+        run: python -m ruff format ${{env.CHANGED_PYTHON_FILES}}"
 
-      - name: "Check SCA: isort"
-        run: python -m isort ${{env.CHANGED_PYTHON_FILES}} --check-only --settings-path="pyproject.toml"
-
-      - name: "Check SCA: flake8"
-        run: python -m flake8 ${{env.CHANGED_PYTHON_FILES}} --count --config="setup.cfg"
-
-      - name: "Check SCA: pylint"
-        run: python -m pylint ${{env.CHANGED_PYTHON_FILES}} --recursive "y" --rcfile="pyproject.toml"
+      - name: "Check SCA: ruff"
+        run: python -m ruff check ${{env.CHANGED_PYTHON_FILES}} --output-format=github"
 
       - name: "Check SCA: mypy"
         run: python -m mypy ${{env.CHANGED_PYTHON_FILES}} --config="pyproject.toml"
-
-      - name: "Check SCA: pydocstyle"
-        run: python -m pydocstyle ${{env.CHANGED_PYTHON_FILES}} --count --config="pyproject.toml"
