--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,40 @@
-[tool.pylint.main]
-fail-under = 8
+[tool.ruff]
+line-length = 120
 
-[tool.pylint.format]
-max-line-length = 120
+[tool.ruff.lint]
+fixable = ["ALL"]
+select = ["ALL"]
+extend-select = [
+  "E",   # Pydocstyle-errors
+  "W",   # Pydocstyle-warnings
+  "F",   # Pyflakes
+  "PL",  # Pylint
+  "I",   # isort
+  "C90", # mccabe
+  "UP",  # pyupgrade
+  "N",   # pep8-naming
+  "D",   # pydocstyle
+  "B",   # flake8-bugbear
+  "A",   # flake8-builtins
+  "PT",  # flake8-pytest-style
+  "Q",   # flake8-quotes
+  "RUF", # Ruff-specific rules
+  "COM", # flake8-commas
+]
 
-[tool.pylint."messages control"]
-disable = ["import-error"]
+ignore = [
+    "COM812", "ISC001"  # "Trailing comma missing"
+]
 
-[tool.black]
-line_length = 120
-
-[tool.isort]
-profile = "black"
-line_length = 120
-
-[tool.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
-add_ignore = ["D100", "D104", "D107", "D202", "D101", "D102", "D103"] # TODO: eventually add back "D101", "D102", "D103"
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
 
 [tool.mypy]
 ignore_missing_imports = true
