--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,11 @@ repos:
       - id: pretty-format-json
 
   # python hooks
+  - repo: https://github.com/asottile/pyupgrade
+    rev: "v3.17.0"
+    hooks:
+      - id: pyupgrade
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.2
     hooks:
@@ -24,7 +29,7 @@ repos:
         types_or: [python, pyi, jupyter]
       # Run the linter.
       - id: ruff
-        args: [--fix]
+        args: [--fix] # --output-format=github
         types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
