--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,9 +20,10 @@ repos:
     rev: "v3.17.0"
     hooks:
       - id: pyupgrade
+        args: [--py312-plus]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.2
+    rev: v0.6.3
     hooks:
       # Run the formatter.
       - id: ruff-format
