Feature: upgrade dev env (#4)
upgrade dev env

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,19 +1,24 @@
 
 # After build contains:
-# - ubuntu22.04
-# - nvidia-cuda11.7
+# - ubuntu24.04
+# - nvidia-cuda12.6
 # - cpp tools
 # - python tools
 # - shell tools
 # - xauth/X11
 # - miniconda
 
-FROM nvidia/cuda:12.3.1-devel-ubuntu22.04
+FROM nvidia/cuda:12.6.0-cudnn-devel-ubuntu24.04
+
+# delete new default user which comes with ubuntu24
+# https://askubuntu.com/questions/1513927/ubuntu-24-04-docker-images-now-includes-user-ubuntu-with-uid-gid-1000
+RUN userdel -r ubuntu
 
 ARG USER=user
 ENV UID=1000
 ENV GID=${UID}
 ENV HOME=/home/${USER}
+ENV WORKSPACE_NAME="dev-playground"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -30,7 +35,7 @@ RUN sudo apt-get update && sudo apt-get install -y \
     && sudo locale-gen en_US.UTF-8 \
     && sudo update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 \
     && sudo rm -rf /var/lib/apt/lists/* && sudo  rm -rf /var/cache/apt && sudo apt-get clean
-ENV LANG en_US.UTF-8
+ENV LANG=en_US.UTF-8
 
 # install timezone
 RUN sudo ln -fs /usr/share/zoneinfo/UTC /etc/localtime \
@@ -82,13 +87,12 @@ RUN sudo apt-get update && sudo apt-get install -y \
     && sudo rm -rf /var/lib/apt/lists/* && sudo rm -rf /var/cache/apt && sudo apt-get clean
 
 # install python code checking/formatting/testing tools
-RUN sudo apt-get update && sudo apt-get install -y \
-    pylint \
-    flake8 \
-    pydocstyle \
+RUN PIP_BREAK_SYSTEM_PACKAGES=1 pip3 install \
+    ruff \
+    pyupgrade \
     mypy \
-    black \
-    isort \
+    ipython \
+    jupyter \
     sphinx \
     && sudo rm -rf /var/lib/apt/lists/* && sudo rm -rf /var/cache/apt && sudo apt-get clean
 
@@ -101,12 +105,14 @@ RUN sudo apt-get update && sudo apt-get install -y \
 # add GUI support using X11
 RUN sudo apt-get update && sudo apt-get install -y \
     xauth \
-    libgl1-mesa-glx \
     && sudo rm -rf /var/lib/apt/lists/* && sudo rm -rf /var/cache/apt && sudo apt-get clean
 
+# install oh-my-bash for a better shell
+RUN bash -c "$(curl -fsSL https://raw.githubusercontent.com/ohmybash/oh-my-bash/master/tools/install.sh)" --unattended
+
 # install miniconda for DL related tasks
-RUN mkdir -p ~/miniconda3/
-RUN wget -q https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
+RUN mkdir -p ~/miniconda3/ \
+    && wget -q https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
     -O ~/miniconda3/Miniconda3-latest-Linux-x86_64.sh \
     && bash ~/miniconda3/Miniconda3-latest-Linux-x86_64.sh -b -u
 
@@ -115,4 +121,4 @@ ENV DEBIAN_FRONTEND=
 
 
 USER ${USER}
-RUN mkdir -p /home/${USER}/workspace
+RUN mkdir -p /home/${USER}/${WORKSPACE_NAME}
