--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
     "editor.formatOnSave": true,
+    "editor.formatOnType": false,
     "editor.insertSpaces": true,
     "editor.tabSize": 4,
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs": "active",
+    "editor.autoClosingBrackets": "never",
     "editor.codeLens": true,
     "editor.rulers": [
         79,
-        99,
         119
     ],
     "files.eol": "\n",
@@ -16,6 +17,9 @@
     "files.trimTrailingWhitespace": true,
     "terminal.integrated.scrollback": 20000,
     "terminal.integrated.defaultProfile.linux": "bash",
+    "files.autoSave": "afterDelay",
+    "explorer.confirmDragAndDrop": false,
+    "explorer.confirmDelete": true,
     "terminal.integrated.profiles.linux": {
         "bash": {
             "path": "/usr/bin/bash"
@@ -23,15 +27,11 @@
     },
     // ---------------------- tool/language specific configs ------------------
     // local history config
-    "local-history.daysLimit": 14,
-    "local-history.maxDisplay": 50,
+    "local-history.daysLimit": 7,
+    "local-history.maxDisplay": 100,
+    "local-history.path": "~/.localhistory/",
     // ---------- git ----------
     "git-graph.maxDepthOfRepoSearch": 5,
-    "[git-commit]": {
-        "editor.rulers": [
-            50
-        ]
-    },
     // ---------- python ----------
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit"
@@ -39,9 +39,13 @@
     "autoDocstring.docstringFormat": "google",
     "autoDocstring.generateDocstringOnEnter": true,
     "autoDocstring.guessTypes": true,
+    "python.testing.pytestEnabled": true,
     // ---------- spell check ----------
     "cSpell.diagnosticLevel": "Hint",
     "cSpell.language": "en",
     "cSpell.logLevel": "Information",
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "basic",
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    }
 }
