setup backend API using fastAPI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ ignore = [
     "D202",                 # No blank lines allowed after function docstring
     "ERA001",               # Found commented-out code
     "D104",                 # Missing docstring in public package
-    "EM102"                 # Exception must not use an f-string literal, assign to variable first
+    "EM102",                 # Exception must not use an f-string literal, assign to variable first
+    "FAST002",              # FastAPI dependency without `Annotated`
 ]
 
 [tool.ruff.lint.pydocstyle]
