--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-24.04]
         python-version: ["3.12"]
+        node-version: ["22.14.0"]
 
     env:
       CHANGED_PYTHON_FILES: $(git diff --diff-filter=d --name-only origin/$GITHUB_BASE_REF origin/$GITHUB_HEAD_REF)
@@ -33,6 +34,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Set up Node (${{ matrix.python-version }})
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+
       - name: Install SCA Python tools
         run: |
           pip install \
@@ -40,6 +46,12 @@ jobs:
               ruff \
               pyupgrade \
               mypy
+
+      - name: Install node/npm tools
+        run: |
+          sudo apt-get update && sudo apt-get install -y curl \
+            && curl -fsSL https://deb.nodesource.com/setup_22.x | sudo bash - && sudo apt-get install -y nodejs \
+            && npm install -g npm@latest \
 
       - name: Run pre-commit SCA checks
         run: |
