install more npm libs in gh actions

--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -21,7 +21,7 @@ jobs:
         node-version: ["22.14.0"]
 
     env:
-      CHANGED_PYTHON_FILES: $(git diff --diff-filter=d --name-only origin/$GITHUB_BASE_REF origin/$GITHUB_HEAD_REF)
+      CHANGED_FILES: $(git diff --diff-filter=d --name-only origin/$GITHUB_BASE_REF origin/$GITHUB_HEAD_REF)
 
     steps:
       - name: Checkout branch
@@ -52,7 +52,8 @@ jobs:
           sudo apt-get update && sudo apt-get install -y curl \
             && curl -fsSL https://deb.nodesource.com/setup_22.x | sudo bash - && sudo apt-get install -y nodejs \
             && npm install -g npm@latest \
+            && npm install @eslint/css eslint eslint-plugin-react eslint-plugin-json eslint-plugin-markdown eslint-plugin-css
 
       - name: Run pre-commit SCA checks
         run: |
-          pre-commit run --files ${{env.CHANGED_PYTHON_FILES}} --color="always"
+          pre-commit run --files ${{env.CHANGED_FILES}} --color="always"
