--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 repos:
   # general hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: "v4.6.0"
+    rev: "v5.0.0"
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -13,17 +13,17 @@ repos:
       - id: check-yaml
       - id: check-xml
       - id: check-json
-      - id: pretty-format-json
+      #- id: pretty-format-json (done by prettier hook below)
 
   # python hooks
   - repo: https://github.com/asottile/pyupgrade
-    rev: "v3.17.0"
+    rev: "v3.19.1"
     hooks:
       - id: pyupgrade
         args: [--py312-plus]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.3
+    rev: v0.11.6
     hooks:
       # Run the formatter.
       - id: ruff-format
@@ -34,7 +34,7 @@ repos:
         types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.11.2"
+    rev: "v1.15.0"
     hooks:
       - id: mypy
         args: ["--config", "pyproject.toml"]
@@ -47,3 +47,16 @@ repos:
         args: [--style=Google]
       - id: clang-tidy
       - id: include-what-you-use
+
+  # javascript and html hooks
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v3.1.0"
+    hooks:
+      - id: prettier
+        types_or: [javascript, html, css, json, yaml]
+
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v9.26.0"
+    hooks:
+      - id: eslint
+        args: ["--fix"]
